--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.freemarker.template-loader-path=classpath:/templates/
 spring.mvc.static-path-pattern=/static/**
 spring.freemarker.request-context-attribute=request
 spring.config.location=/ckfinder.xml
+#热部署生效
+spring.devtools.restart.enabled=true
+spring.devtools.restart.exclude=templates
+
