--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,13 @@ spring.config.location=/ckfinder.xml
 #热部署生效
 spring.devtools.restart.enabled=true
 spring.devtools.restart.exclude=templates
+#数据源配置
+spring.datasource.url=jdbc:mysql://118.24.7.178:3306/online?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=yelei
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource  
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#mybatis配置
+mybatis.typeAliasesPackage=com.yl.online.entity
+mybatis.mapperLocations=classpath:mappers/*.xml
 
