--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.config.location=/ckfinder.xml
 spring.devtools.restart.enabled=true
 spring.devtools.restart.exclude=templates
 # ˝æ›‘¥≈‰÷√
-spring.datasource.url=jdbc:mysql://118.24.7.178:3306/online?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://118.24.7.178:3306/online
 spring.datasource.username=root
 spring.datasource.password=yelei
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource  
@@ -23,4 +23,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #mybatis≈‰÷√
 mybatis.typeAliasesPackage=com.yl.online.entity
 mybatis.mapperLocations=classpath:mappers/*.xml
+logging.level.com.yl.online.controller=DEBUG
 
